<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/main_screen_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".LibraryActivity">

        <LinearLayout
            android:id="@+id/albums"
            style="@style/Librarylayouts"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:layout_width="@dimen/play"
                android:layout_height="@dimen/play"
                android:background="@drawable/ic_album_black_24dp" />

            <TextView
                style="@style/LibraryStyle"
                android:text="@string/category_albums" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/artist"
            style="@style/Librarylayouts"
            android:background="@color/colorPrimary">

            <TextView
                android:background="@drawable/ic_person_black_24dp"
                android:layout_width="@dimen/play"
                android:layout_height="@dimen/play" />

            <TextView
                style="@style/LibraryStyle"
                android:text="@string/category_artist" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/songs"
            style="@style/Librarylayouts"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:background="@drawable/ic_music_note_black_24dp"
                android:layout_width="@dimen/play"
                android:layout_height="@dimen/play" />

            <TextView
                style="@style/LibraryStyle"
                android:text="@string/category_songs" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/playlists"
            style="@style/Librarylayouts"
            android:background="@color/colorPrimary">

            <TextView
                android:background="@drawable/ic_list_black_24dp"
                android:layout_width="@dimen/play"
                android:layout_height="@dimen/play" />

            <TextView
                style="@style/LibraryStyle"
                android:text="@string/category_playlists" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>

