<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_screen_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/default_image"
            android:scaleType="centerCrop"
            android:src="@drawable/app_image" />

        <TextView
            android:id="@+id/library"
            android:layout_width="@dimen/skipSize"
            android:layout_height="@dimen/skipSize"
            android:layout_margin="10dp"
            android:background="@drawable/ic_library_music_black_24dp" />

    </RelativeLayout>

    <TextView
        android:layout_weight="1.5"
        style="@style/SongData"
        android:text="@string/song_name"
        android:textColor="@color/song_text_color"
        android:textSize="40sp" />

    <TextView
        style="@style/SongData"
        android:layout_weight="1"
        android:text="@string/artist_name"
        android:textColor="@color/iconsColor"
        android:textSize="35sp" />

    <TextView
        style="@style/SongData"
        android:layout_weight="1"
        android:text="@string/album_name"
        android:textColor="@color/song_data_text_color"
        android:textSize="30sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/repeat"
            android:layout_width="@dimen/repeat_and_shuffle_size"
            android:layout_height="@dimen/repeat_and_shuffle_size"
            android:layout_margin="24dp"
            android:background="@drawable/ic_repeat_black_24dp" />

        <TextView
            android:id="@+id/play_previous"
            android:layout_width="@dimen/skipSize"
            android:layout_height="@dimen/skipSize"
            android:background="@drawable/ic_skip_previous_black_24dp" />

        <TextView
            android:id="@+id/play_button"
            style="@android:style/MediaButton.Play"
            android:layout_width="@dimen/play"
            android:layout_height="@dimen/play"
            android:layout_margin="12dp"
            android:background="@drawable/play_button" />


        <TextView
            android:id="@+id/play_next"
            android:layout_width="@dimen/skipSize"
            android:layout_height="@dimen/skipSize"
            android:background="@drawable/ic_skip_next_black_24dp" />

        <TextView
            android:id="@+id/shuffle"
            android:layout_width="@dimen/repeat_and_shuffle_size"
            android:layout_height="@dimen/repeat_and_shuffle_size"
            android:layout_margin="24dp"
            android:background="@drawable/ic_shuffle_black_24dp" />

    </LinearLayout>

</LinearLayout>